# door_detector

./: .gitignore  .gitmodules  LICENSE  README.md  scp_board.sh
board/: CMakeLists.txt  Makefile
board/install/: setup.sh
board/install/helpers/: linux_pcks.sh  submodules.sh  wiring_pi.sh
board/src/cli/: CMakeLists.txt  cli_controller.cpp
board/src/client/: CMakeLists.txt  client.cpp
board/src/cmake/: FindCLI11.cmake  FindJSON.cmake  Findwiring_pi.cmake
board/src/gpio/: CMakeLists.txt  gpio_controller.cpp
board/src/includes/: cli_controller.h  client.h  constants.h  gpio_controller.h  json_utils.h  multicaster.h  thread_utils.h
board/src/includes/network/: comm_utils.h  confirm_handshake.h  handshake_base.h  handshake_controller.h  recv_handshake.h  setup_comm.h  udp_sender.h
board/src/json/: CMakeLists.txt  json_utils.cpp
board/src/main/: CMakeLists.txt  main.cpp
board/src/network/: CMakeLists.txt  comm_utils.cpp  confirm_handshake.cpp  handshake_base.cpp  handshake_controller.cpp  multicaster.cpp  recv_handshake.cpp  setup_comm.cpp  udp_sender.cpp
board/src/thread_utils/: CMakeLists.txt  thread_utils.cpp
info_files/: circuit_diagram.docx
server/: cli_parser.py  constants.py  handshake.py  main.py  main_loop.py  notification.py  run_server.sh  server.py
server/install/: install.sh  requirements.txt
server/network/: handshake.py  network_utils.py  server.py
server/web_app/: app_constants.py  app_manager.py
server/web_app/frontend/static/js/: main-page.js  server-messages.js  shutdown.js  socket-io-1.4.5.min.js  utils.js
server/web_app/frontend/templates/: index.html
